--- a/public/manifest.json
+++ b/public/manifest.json
@@ -10,7 +10,7 @@
     ],
     "theme_color":"#ffffff",
     "background_color":"#01579b",
-    "start_url": "../index.html",
+    "start_url": "public/index.html",
     "display":"standalone"
 }
 
